# decmp

./: AGENTS.md  Cargo.toml  LICENSE  README.md
crates/decmp/: Cargo.toml
crates/decmp-core/: Cargo.toml
crates/decmp-core/src/: encoding.rs  error.rs  lib.rs  utils.rs
crates/decmp-core/src/archive/: bzip2.rs  gzip.rs  mod.rs  rar.rs  sevenz.rs  tar.rs  xz.rs  zip.rs  zstd.rs
crates/decmp-tui/: Cargo.toml
crates/decmp-tui/src/: action.rs  app.rs  context.rs  event.rs  highlight.rs  layout.rs  main.rs  popup.rs  scroll.rs  tile.rs  tree.rs  ui.rs
crates/decmp-tui/src/app/: encoding.rs  extract.rs  mod.rs  navigation.rs  password.rs  preview.rs  scroll.rs
crates/decmp-tui/src/popups/: encoding.rs  extract_dest.rs  help.rs  mod.rs  password.rs
crates/decmp-tui/src/tiles/: file_list.rs  mod.rs  preview.rs  properties.rs  status_bar.rs
crates/decmp/src/: cli.rs  main.rs
crates/decmp/tests/: integration.rs
