[package]
name = "decmp-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
decmp-core = { path = "../decmp-core" }
ratatui = "0.30"
crossterm = "0.29"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-fancy"] }

[dev-dependencies]
tempfile = "3"
